plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'checkstyle'
    id 'com.diffplug.spotless' version '8.10.0'
}

group = 'com.gommit'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-mysql'
    implementation 'org.springframework.boot:spring-boot-h2console'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'

    implementation 'com.cloudinary:cloudinary-http5:2.4.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-mysql'
}

spotless {
    java {
        target 'src/**/*.java'
        palantirJavaFormat()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
    enforceCheck = false
}

checkstyle {
    toolVersion = '14.0.0'
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = true
    maxWarnings = Integer.MAX_VALUE
}

tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required = true
        html.required = true
    }
}

jacoco {
    toolVersion = '0.8.13'
}

def jacocoIncludePatterns = [
        '**/*Controller.class',
        '**/*Service.class',
        '**/*ServiceImpl.class',
]

def jacocoTargets = { classDirs ->
    files(classDirs.files.collect { fileTree(dir: it, includes: jacocoIncludePatterns) })
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
    reports {
        xml.required = true
        html.required = true
    }
    classDirectories.setFrom(jacocoTargets(classDirectories))
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn tasks.named('test')
    classDirectories.setFrom(jacocoTargets(classDirectories))
    violationRules {
        failOnViolation = false
        rule {
            limit {
                counter = 'LINE'
                minimum = 0.80
            }
        }
        rule {
            limit {
                counter = 'BRANCH'
                minimum = 0.70
            }
        }
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    systemProperty 'spring.profiles.active', 'test'
    systemProperty 'user.timezone', 'Asia/Seoul'
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('check') {
    dependsOn tasks.named('jacocoTestCoverageVerification')
}
